genium/src/test/resources/examples/errors/output/swift/ErrorsExtensions.swift
//
//
// Automatically generated. Do not modify. Your changes will be lost.
import Foundation
extension Errors.InternalErrors : Error {
}